# security_cam

./: .gitignore  Cargo.toml  README.md  client.py
src/: footage.rs  index.html  main.rs  servo.rs
