[package]
name = "security_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false, features = ["http2", "ws"] }
drm-fourcc = "2.2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
libcamera = "0.2"
rppal = { version = "0.17", features = ["hal"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
